# nft-marketplace-backend

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: f5e104243c03_create_initial_nft_marketplace_tables.py
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: auth.py  collections.py  favorites.py  listings.py  nfts.py  search.py  uploads.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  collection.py  favorite.py  listing.py  nft.py  user.py
app/schemas/: auth.py  collection.py  favorite.py  listing.py  nft.py  user.py
app/services/: storage_service.py
tests/: test_auth.py  test_collections.py  test_health.py  test_listings.py  test_nfts.py
