[project]
name = "nft-marketplace-backend"
version = "1.0.0"
description = "FastAPI backend for NFT collections, marketplace listings, favorites, search, authentication, and MinIO uploads."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
